--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,5 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    
+    <welcome-file-list>
+        <welcome-file>adminUser.jsp</welcome-file>
+        <welcome-file>adminQues.jsp</welcome-file>
+        <welcome-file>adminGame.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
